# allscreenshots-sdk-rust

./: .gitignore
.github/workflows/: build.yml  release.yml
sample-app/: Cargo.toml  README.md
sample-app/src/: main.rs
sdk/: Cargo.toml  README.md  llm-integration-prompt.md  renovate.json
sdk/.github/workflows/: build.yml  release.yml
sdk/src/: client.rs  error.rs  lib.rs  retry.rs
sdk/src/models/: bulk.rs  common.rs  compose.rs  mod.rs  schedule.rs  screenshot.rs  usage.rs
sdk/tests/integration/: main.rs
sdk/tests/unit/: error_tests.rs  mod.rs  models_tests.rs
