[package]
name = "allscreenshots-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Allscreenshots <support@allscreenshots.com>"]
description = "Official Rust SDK for the Allscreenshots API - capture website screenshots programmatically"
license = "Apache-2.0"
repository = "https://github.com/allscreenshots/allscreenshots-sdk-rust"
homepage = "https://allscreenshots.com"
documentation = "https://docs.rs/allscreenshots-sdk"
readme = "README.md"
keywords = ["screenshot", "api", "web", "capture", "allscreenshots"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"

[[test]]
name = "integration"
path = "tests/integration/main.rs"

[features]
default = []
blocking = []
